# rust_booking_api

./: .env  .gitmodules  Cargo.toml  config-migrate.yaml  schema.txt
Client/: interfaces.ts
src/: actions.rs  auth.rs  auth_middleware.rs  client_actions.rs  crud_controllers.rs  db.rs  errors.rs  lib.rs  main.rs  model.rs  password_json.rs  schema.rs
